@@ -18,6 +18,8 @@ glibc (2.30-0experimental3) UNRELEASED; urgency=medium
   [ Aurelien Jarno ]
   * debian/patches/any/local-revert-24323.diff: drop, obsolete.
   * debian/control.in/libc: add a Breaks: against wcc (<< 0.0.2+dfsg-3).
+  * debian/patches/any/submitted-stt-gnu-ifunc-detection.patch: update to
+    version 2 of the patch to fix the wrong detection on sparc.
 
  -- Samuel Thibault <sthibault@debian.org>  Sat, 08 Feb 2020 03:08:56 +0100
 
